test_output_2.txt

> task-manager-backend@1.0.0 test
> jest tests/unit/admin.service.test.js

node.exe : FAIL 
tests/unit/admin.service.test.js
At C:\Program Files\nodejs\npm.ps1:29 char:3
+   & $NODE_EXE $NPM_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified:  
   (FAIL tests/unit/admin.service.test.js:S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandE 
   rror
 
  ΓùÅ Test suite failed to run

    SyntaxError: E:\MultiVendor\multivendor\t
ests\setup\test-setup.js: Unexpected 
reserved word 'await'. (254:6)

    [0m [90m 252 |[39m   [36mstatic[39m 
expectAsyncError(asyncFn[33m,[39m 
expectedErrorClass[33m,[39m 
expectedMessage) {
     [90m 253 |[39m     [36mtry[39m {
    [31m[1m>[22m[39m[90m 254 |[39m     
  [36mawait[39m asyncFn()[33m;[39m
     [90m     |[39m       
[31m[1m^[22m[39m
     [90m 255 |[39m       [36mthrow[39m 
[36mnew[39m [33mError[39m([32m'Expected 
async function to throw an 
error'[39m)[33m;[39m
     [90m 256 |[39m     } [36mcatch[39m 
(error) {
     [90m 257 |[39m       expect(error)[33
m.[39mtoBeInstanceOf(expectedErrorClass)[33
m;[39m[0m

    [0m [90m 1 |[39m [36mimport[39m { 
describe[33m,[39m beforeAll[33m,[39m 
beforeEach[33m,[39m expect[33m,[39m jest 
} [36mfrom[39m 
[32m'@jest/globals'[39m[33m;[39m
     [90m 2 |[39m [36mimport[39m 
[33mAppError[39m [36mfrom[39m [32m'../..
/src/utils/AppError.js'[39m[33m;[39m
    [31m[1m>[22m[39m[90m 3 |[39m 
[36mimport[39m { 
[33mTestDataFactory[39m[33m,[39m 
[33mTestUtils[39m } [36mfrom[39m 
[32m'../setup/test-setup.js'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 4 |[39m [36mimport[39m 
mongoose [36mfrom[39m 
[32m'mongoose'[39m[33m;[39m
     [90m 5 |[39m [36mimport[39m jwt 
[36mfrom[39m 
[32m'jsonwebtoken'[39m[33m;[39m
     [90m 6 |[39m[0m

      at constructor (node_modules/@babel/par
ser/src/parse-error.ts:95:45)
      at Parser.toParseError [as raise] (node
_modules/@babel/parser/src/tokenizer/index.ts
:1504:19)
      at Parser.raise [as checkReservedWord] 
(node_modules/@babel/parser/src/parser/expres
sion.ts:2888:12)
      at Parser.checkReservedWord [as 
parseIdentifierName] (node_modules/@babel/par
ser/src/parser/expression.ts:2850:12)
      at Parser.parseIdentifierName [as 
parseIdentifier] (node_modules/@babel/parser/
src/parser/expression.ts:2807:23)
      at Parser.parseIdentifier [as 
parseExprAtom] (node_modules/@babel/parser/sr
c/parser/expression.ts:1304:27)
      at Parser.parseExprAtom [as 
parseExprSubscripts] (node_modules/@babel/par
ser/src/parser/expression.ts:742:23)
      at Parser.parseExprSubscripts [as 
parseUpdate] (node_modules/@babel/parser/src/
parser/expression.ts:721:21)
      at Parser.parseUpdate [as 
parseMaybeUnary] (node_modules/@babel/parser/
src/parser/expression.ts:683:23)
      at Parser.parseMaybeUnary [as 
parseMaybeUnaryOrPrivate] (node_modules/@babe
l/parser/src/parser/expression.ts:417:14)
      at Parser.parseMaybeUnaryOrPrivate [as 
parseExprOps] (node_modules/@babel/parser/src
/parser/expression.ts:429:23)
      at Parser.parseExprOps [as 
parseMaybeConditional] (node_modules/@babel/p
arser/src/parser/expression.ts:384:23)
      at Parser.parseMaybeConditional [as 
parseMaybeAssign] (node_modules/@babel/parser
/src/parser/expression.ts:301:21)
      at Parser.parseMaybeAssign [as 
parseExpressionBase] (node_modules/@babel/par
ser/src/parser/expression.ts:226:23)
      at parseExpressionBase (node_modules/@b
abel/parser/src/parser/expression.ts:217:39)
      at Parser.callback [as allowInAnd] (nod
e_modules/@babel/parser/src/parser/expression
.ts:3189:16)
      at Parser.allowInAnd [as 
parseExpression] (node_modules/@babel/parser/
src/parser/expression.ts:217:17)
      at Parser.parseExpression [as 
parseStatementContent] (node_modules/@babel/p
arser/src/parser/statement.ts:688:23)
      at Parser.parseStatementContent [as 
parseStatementLike] (node_modules/@babel/pars
er/src/parser/statement.ts:482:17)
      at Parser.parseStatementLike [as 
parseStatementListItem] (node_modules/@babel/
parser/src/parser/statement.ts:431:17)
      at Parser.parseStatementListItem [as 
parseBlockOrModuleBlockBody] (node_modules/@b
abel/parser/src/parser/statement.ts:1444:16)
      at Parser.parseBlockOrModuleBlockBody 
[as parseBlockBody] (node_modules/@babel/pars
er/src/parser/statement.ts:1417:10)
      at Parser.parseBlockBody [as 
parseBlock] (node_modules/@babel/parser/src/p
arser/statement.ts:1385:10)
      at Parser.parseBlock [as 
parseTryStatement] (node_modules/@babel/parse
r/src/parser/statement.ts:1205:23)
      at Parser.parseTryStatement [as 
parseStatementContent] (node_modules/@babel/p
arser/src/parser/statement.ts:549:21)
      at Parser.parseStatementContent [as 
parseStatementLike] (node_modules/@babel/pars
er/src/parser/statement.ts:482:17)
      at Parser.parseStatementLike [as 
parseStatementListItem] (node_modules/@babel/
parser/src/parser/statement.ts:431:17)
      at Parser.parseStatementListItem [as 
parseBlockOrModuleBlockBody] (node_modules/@b
abel/parser/src/parser/statement.ts:1444:16)
      at Parser.parseBlockOrModuleBlockBody 
[as parseBlockBody] (node_modules/@babel/pars
er/src/parser/statement.ts:1417:10)
      at Parser.parseBlockBody [as 
parseBlock] (node_modules/@babel/parser/src/p
arser/statement.ts:1385:10)
      at Parser.parseBlock [as 
parseFunctionBody] (node_modules/@babel/parse
r/src/parser/expression.ts:2618:24)
      at Parser.parseFunctionBody [as 
parseFunctionBodyAndFinish] (node_modules/@ba
bel/parser/src/parser/expression.ts:2587:10)
      at Parser.parseFunctionBodyAndFinish 
[as parseMethod] (node_modules/@babel/parser/
src/parser/expression.ts:2492:31)
      at Parser.parseMethod [as 
pushClassMethod] (node_modules/@babel/parser/
src/parser/statement.ts:2244:12)
      at Parser.pushClassMethod [as 
parseClassMemberWithIsStatic] (node_modules/@
babel/parser/src/parser/statement.ts:2023:12)
      at Parser.parseClassMemberWithIsStatic 
[as parseClassMember] (node_modules/@babel/pa
rser/src/parser/statement.ts:1938:10)
      at parseClassMember (node_modules/@babe
l/parser/src/parser/statement.ts:1851:14)
      at Parser.callback [as 
withSmartMixTopicForbiddingContext] (node_mod
ules/@babel/parser/src/parser/expression.ts:3
168:14)
      at 
Parser.withSmartMixTopicForbiddingContext 
[as parseClassBody] (node_modules/@babel/pars
er/src/parser/statement.ts:1823:10)
      at Parser.parseClassBody [as 
parseClass] (node_modules/@babel/parser/src/p
arser/statement.ts:1774:22)
      at Parser.parseClass [as 
parseStatementContent] (node_modules/@babel/p
arser/src/parser/statement.ts:532:21)
      at Parser.parseStatementContent [as 
parseStatementLike] (node_modules/@babel/pars
er/src/parser/statement.ts:482:17)
      at Parser.parseStatementLike [as 
parseModuleItem] (node_modules/@babel/parser/
src/parser/statement.ts:419:17)
      at Parser.parseModuleItem [as 
parseBlockOrModuleBlockBody] (node_modules/@b
abel/parser/src/parser/statement.ts:1443:16)
      at Parser.parseBlockOrModuleBlockBody 
[as parseBlockBody] (node_modules/@babel/pars
er/src/parser/statement.ts:1417:10)
      at Parser.parseBlockBody [as 
parseProgram] (node_modules/@babel/parser/src
/parser/statement.ts:229:10)
      at Parser.parseProgram [as 
parseTopLevel] (node_modules/@babel/parser/sr
c/parser/statement.ts:203:25)
      at Parser.parseTopLevel [as parse] (nod
e_modules/@babel/parser/src/parser/index.ts:8
3:25)
      at parse (node_modules/@babel/parser/sr
c/index.ts:86:38)
      at parser (node_modules/@babel/core/src
/parser/index.ts:29:19)
          at parser.next (<anonymous>)
      at normalizeFile (node_modules/@babel/c
ore/src/transformation/normalize-file.ts:50:2
4)
          at normalizeFile.next (<anonymous>)
      at run (node_modules/@babel/core/src/tr
ansformation/index.ts:41:36)
          at run.next (<anonymous>)
      at transform (node_modules/@babel/core/
src/transform.ts:29:20)
          at transform.next (<anonymous>)
      at evaluateSync 
(node_modules/gensync/index.js:251:28)
      at sync 
(node_modules/gensync/index.js:89:14)
      at fn (node_modules/@babel/core/src/err
ors/rewrite-stack-trace.ts:99:14)
      at transformSync (node_modules/@babel/c
ore/src/transform.ts:66:52)
      at ScriptTransformer.transformSource (n
ode_modules/@jest/transform/build/ScriptTrans
former.js:545:31)
      at 
ScriptTransformer._transformAndBuildScript (n
ode_modules/@jest/transform/build/ScriptTrans
former.js:674:40)
      at ScriptTransformer.transform (node_mo
dules/@jest/transform/build/ScriptTransformer
.js:726:19)
      at Object.require 
(tests/unit/admin.service.test.js:3:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.635 s
Ran all test suites matching 
/tests\\unit\\admin.service.test.js/i.
